<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.SubtitleCollapsingToolbarLayout
            android:id="@+id/details_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:fixMenuPadding="true"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <ImageView
                android:id="@+id/details_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/backdrop_image_content_description"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_wide"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.4" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical|start"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.SubtitleCollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/details_refresh_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="32dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:cardBackgroundColor="@color/cardview_dark_background"
                            app:cardCornerRadius="1dp"
                            app:cardElevation="6dp">

                            <ImageView
                                android:id="@+id/details_poster"
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/default_poster_content_description"
                                android:scaleType="centerCrop"
                                android:src="@drawable/placeholder" />

                        </android.support.v7.widget.CardView>

                        <TextView
                            android:id="@+id/details_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif"
                            android:gravity="end"
                            android:textSize="14sp"
                            tools:text="Feb 2017" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <FrameLayout
                            android:id="@+id/details_adult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            android:background="@drawable/border"
                            android:visibility="gone">


                            <TextView
                                android:id="@+id/adult"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:gravity="center_horizontal"
                                android:paddingBottom="8dp"
                                android:paddingEnd="16dp"
                                android:paddingStart="16dp"
                                android:paddingTop="8dp"
                                android:text="@string/adult"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </FrameLayout>

                        <TextView
                            android:id="@+id/details_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="sans-serif"
                            android:textSize="18sp"
                            android:textStyle="italic"
                            tools:text="2 hours 3 minutes" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                android:id="@+id/details_rating_bar"
                                style="@style/Widget.MaterialRatingBar.RatingBar"
                                android:layout_width="120dp"
                                android:layout_height="24dp"
                                android:isIndicator="true"
                                android:numStars="5"
                                android:stepSize="0.1"
                                app:mrb_fillBackgroundStars="true" />

                            <TextView
                                android:id="@+id/details_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="sans-serif"
                                android:textSize="14sp"
                                android:textStyle="italic"
                                tools:text="2.4 / 5.0" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/plot_synopsis"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/details_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="16sp"
                    tools:text="When a feisty little fox named Tod is adopted into a farm family, he quickly becomes friends with a fun and adorable hound puppy named Copper. Life is full of hilarious adventures until Copper is expected to take on his role as a hunting dog -- and the object of his search is his best friend!" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/genres"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/details_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:alignContent="stretch"
                    app:alignItems="stretch"
                    app:flexDirection="row"
                    app:flexWrap="wrap"
                    app:showDivider="end" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>